[tool.poetry]
name = "pantos-validator-node"
version = "2.1.3"
description = "Pantos Validator Node (reference implementation)"
authors = ["Pantos GmbH <contact@pantos.io>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "pantos"}
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pantos"]
namespaces = true

[tool.poetry.group.test.dependencies]
pytest = "8.3.3"
pytest-cov = "6.0.0"
web3 = {extras = ["tester"], version = "^6.5.0"}

[tool.poetry.group.lint.dependencies]
bandit = "1.7.10"
flake8 = "7.1.1"
isort = "5.13.2"
mypy = "1.0.1"
types-pyyaml = "6.0.12.20240917"
types-requests = "2.32.0.20241016"
yapf = "0.43.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"

[tool.poetry.dependencies]
python = "^3.10"
pantos-common = "4.0.1"
alembic = "1.14.0"
celery = "5.3.1"
Cerberus = "1.3.4"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
Flask-RESTful = "0.3.10"
marshmallow = "3.23.1"
psycopg = {extras = ["binary", "pool"], version = "3.2.3"}
PyYAML = "6.0.1"
SQLAlchemy = "2.0.36"
web3 = "6.5.0"
JSON-log-formatter = "0.5.2"
pyaml-env = "1.2.1"
python-dotenv = "1.0.1"
semantic-version = "2.10.0"
requests = "2.32.3"
hexbytes = "1.2.1"
flower = "^2.0.1"
gunicorn = ">=22,<24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
